--- a/package.json
+++ b/package.json
@@ -14,16 +14,22 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.4",
     "@mui/lab": "^5.0.0-alpha.160",
     "@mui/material": "^5.15.4",
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "jsdom": "^23.2.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.21.1",
+    "react-syntax-highlighter": "^15.5.0",
     "react-test-renderer": "^18.2.0",
+    "remark-gfm": "^4.0.0",
     "styled-components": "^6.1.8",
     "vitest": "^1.1.3",
     "yarn": "^1.22.21"
